--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,17 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 html,
 body {
   max-width: 100vw;
+  min-height: 100vh;
+
   overflow-x: hidden;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 * {
@@ -35,8 +25,30 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.input input::-webkit-outer-spin-button,
+.input input::-webkit-inner-spin-button {
+  -webkit-appearance: none !important;
+  margin: 0 !important;
+}
+
+.dashboardInput {
+  max-width: 40px;
+  height: 30px !important;
+  margin: 2px;
+}
+
+.dashboardInput div {
+  height: inherit;
+}
+
+.dashboardInput input {
+  padding: 8px;
+}
+
+.strike {
+  color: darkgreen;
+}
+
+.spare {
+  color: darkcyan;
 }
